# lm-inspect

./: D3Test.ipynb  SLTC 2020.ipynb  WSD-Swedish.ipynb  Word sense disambiguation.ipynb  inspect.html  lm_inspect.py  main.py  requirements.txt  setup.cfg  sltc.py  visualize_view.py  word_sense_disambiguation.py
Swedish/: convert_senseval_to_csv.py
lm_inspect/: __init__.py  configuration.py  helpers.py  inspect.py  methods.py  visualize_view.py
lm_inspect/methods/: __init__.py  topk.py
lm_inspect/web/: inspect.css  visualize.js
web/: inspect.css  inspect.html
