[metadata]
# replace with your username:
name = lm-inspector-felixhultin
version = 0.0.1
url = https://github.com/felixhultin/lm-inspect
author = Felix Morger
author_email = hultinfelix@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = Transparent analysis of language models
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6
